Add orders information

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -30,3 +30,6 @@ addClient:
 addCommand:
     path: /addCommand
     controller: App\Controller\CommandController::addCommand
+displayAllOrders:
+    path: /displayAll
+    controller: App\Controller\CommandController::displayAllOrders
