--- a/.env
+++ b/.env
@@ -33,3 +33,7 @@ DATABASE_URL=mysql://yannis:giannis97@127.0.0.1:3306/db_bar
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
